packages/dappy-node/kubernetes/envs/minikube/pg/pg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg
spec:
  selector:
    matchLabels:
      app: pg
  template:
    metadata:
      labels:
        app: pg
    spec:
      volumes:
      - name: pg-pv
        hostPath:
          path: /data/pg/
          type: DirectoryOrCreate
      containers:
        - image: postgres:14-alpine
          name: pg
          volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: pg-pv
          ports:
            - containerPort: 5432
          resources:
            limits:
              cpu: 1000m
              memory: 2Gi
      restartPolicy: Always
