packages/dappy-node/kubernetes/envs/minikube/pg/pg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pg
spec:
  type: ClusterIP
  selector:
    app: pg
  ports:
    - port: 5432
      name: pg
      targetPort: 5432
