packages/dappy-node/kubernetes/envs/minikube/pg/adminer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
    - hosts:
      - pg.dappy.dev
      secretName: dappy-node-tls
  rules:
    - host: pg.dappy.dev
      http:
        paths:
        - path: /adminer
          pathType: Prefix
          backend:
            service:
              name: adminer
              port:
                number: 8080
